# cokacdir

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  POSSIBLE_ISSUE.md  README.md  SECURITY.md  build.py  build_manual.md  builtclean.sh  diffpr.py  index.html  install.sh  install_windows_build_deps.sh  package.json  rustfmt.toml
assets/: index-9iUVYApc.js  index-B_JnYy5y.js  index-Bv2kAmD6.js  index-C5I8kjMo.js  index-CB-lOCcn.js  index-CBLy7UPV.js  index-CKKbmnYl.css  index-CVfA0yDp.js  index-D5NNuT8r.js  index-DIW9z102.js  index-DU90yMz-.js  index-DupMqxzn.css  index-PlESvcB8.js  index-QoMcYgWW.js  index-TOb8Ugrv.js  index-Y5U9J_8r.css  index-aIm3RPfC.css  index-hismYdhE.css  index-pG-ZtHGE.css  index-pnLoq7q4.js
builder/: __init__.py  config.py  executor.py  logger.py  targets.py  tools.py
pr_review/: 10.md  10.result.md  11.md  11.result.md  12.md  12.result.md  13.md  13.result.md  4.md  6.md  6.result.md  7.md  7.result.md  8.md  8.result.md  9.md  9.result.md
src/: App.tsx  cli.tsx  config.rs  keybindings.rs  main.rs
src/components/: ConfirmDialog.tsx  FileEditor.tsx  FileViewer.tsx  InputDialog.tsx  Panel.tsx  SearchDialog.tsx
src/enc/: mod.rs  naming.rs
src/screens/: DualPanel.tsx
src/services/: claude.rs  claude.ts  codex.rs  dedup.rs  file_ops.rs  mod.rs  process.rs  remote.rs  remote_transfer.rs  telegram.rs
src/types/: index.ts
src/ui/: advanced_search.rs  ai_screen.rs  app.rs  dedup_screen.rs  dialogs.rs  diff_file_view.rs  diff_screen.rs  (+15 more)
website/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
(+37 files in other folders)
